# capsule-as-package-demo

./: LICENSE  README.md  pyproject.toml
code/: demo.ipynb  demo.py  run
code/demo_package/: __init__.py
metadata/: metadata.yml
